Add 4.png and 10.png to Git Branching section with enhanced UI

--- a/index.html
+++ b/index.html
@@ -305,6 +305,28 @@
         <h2>Git Branching — Feature Development & Workflow</h2>
         <p style="font-size:18px; margin-bottom:40px;">Branch = independent line of development. <strong>main</strong> is always stable/production.</p>
 
+        <!-- Branching Hero Images -->
+        <div class="branching-hero">
+          <div class="branching-hero-item" data-image="4.png" data-title="Branching Fundamentals" data-description="Understanding how branches work in Git - creating independent lines of development that allow you to work on features without affecting the main codebase.">
+            <div class="branching-hero-image">
+              <img src="4.png" alt="Branching Fundamentals">
+            </div>
+            <div class="branching-hero-overlay">
+              <h3>Branching Fundamentals</h3>
+              <p>Learn the core concepts of Git branching</p>
+            </div>
+          </div>
+          <div class="branching-hero-item" data-image="10.png" data-title="Advanced Branching" data-description="Master advanced branching techniques including merge strategies, rebasing, and managing complex branch workflows for team collaboration.">
+            <div class="branching-hero-image">
+              <img src="10.png" alt="Advanced Branching">
+            </div>
+            <div class="branching-hero-overlay">
+              <h3>Advanced Branching</h3>
+              <p>Explore advanced branching strategies</p>
+            </div>
+          </div>
+        </div>
+
         <div class="branching-intro">
           <div class="branching-text">
             <h4>Common Branch Naming</h4>
