Enhance Repo Visibility table with improved styling and prominence

--- a/index.html
+++ b/index.html
@@ -199,14 +199,16 @@
           </div>
           <div>
             <h4>Repo Visibility</h4>
-            <table class="mini-table">
-              <thead><tr><th>Aspect</th><th>Public</th><th>Private</th></tr></thead>
-              <tbody>
-                <tr><td>Who sees?</td><td>Everyone</td><td>Just you or team</td></tr>
-                <tr><td>Use case</td><td>Open source, portfolio</td><td>Internal/team</td></tr>
-                <tr><td>Contribute</td><td>Anyone can fork/raise issues</td><td>Only team</td></tr>
-              </tbody>
-            </table>
+            <div class="visibility-table-wrapper">
+              <table class="mini-table">
+                <thead><tr><th>Aspect</th><th>Public</th><th>Private</th></tr></thead>
+                <tbody>
+                  <tr><td>Who sees?</td><td>Everyone</td><td>Just you or team</td></tr>
+                  <tr><td>Use case</td><td>Open source, portfolio</td><td>Internal/team, proprietary</td></tr>
+                  <tr><td>Contribute</td><td>Anyone can fork/raise issues</td><td>Only team</td></tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
